fix(components): Refix the vertical alignment firefix on Firefox for FormFields (#474)
* Update inline styling for FormField

* Remove extra unneccessary styling

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -99,7 +99,11 @@ select.formField {
 .inline {
   display: inline-block;
   width: auto;
-  vertical-align: -moz-middle-with-baseline;
+}
+
+.inline > input,
+.inline > select {
+  display: inline-block;
 }
 
 /* Sizes */
